themes/finna2/less/finna/feed.less
/* ... */
// rss-feed in modal window
#modal.feed-content {
    -webkit-overflow-scrolling: auto ;
    .modal-dialog {
        img {
            .rss-content-image();
            max-width: 100% !important;
            height: auto !important;
        }
        .date {
            color: @gray-light;
            margin-bottom: 15px;
            display: none;
        }
        ul, ol {
            margin-left: 25px;
        }
        ul li {
            list-style-type: disc;
        }
        ol li {
            list-style-type: decimal;
        }
    }
}

// rss-feed on organisation page
.organisation-info-page .feed-container.info-element {
    .list-feed {
        padding: 0;
        margin-bottom: 0;
    }
}

// Feed tabs
.feed-tabs-container {
    display: flex;
    justify-content: space-between;
    margin-top: 20px;
    margin-bottom: 12px;
    border-bottom: 1px solid #919191;
    .feed-tabs-title {
        margin-left: 0;
        margin-bottom: 5px;
    }
    .nav {
        margin-bottom: 0;
    }
    .nav-tabs {
        border-bottom: none;
        margin-right: 0;
    }
    ul {
        display: flex;
        justify-content: flex-end;
    }
}

// Grid styling
.feed-grid {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    .grid-item {
        flex-basis: 33%;
        max-height: 125px;
        margin-bottom: 20px;
        overflow: hidden;
        @media (max-width: @screen-sm-max) {
            flex-basis: 50%;
        }
        @media (max-width: @screen-xs-max) {
            flex-basis: 100%;
        }
        .grid-info {
            color: @text-color;
            .title {
                font-weight: 700;
                color: @link-color;
            }
            .xcal {
                i {
                    padding-right: 5px;
                }
            }
        }
    }
    &.with-image {
        .grid-item {
            .grid-info {
                width: 55%;
                padding-right: 10px;
                padding-left: 10px;
            }
        }
        .grid-image {
            width: 45%;
        }
        img {
            object-fit: cover;
            width: 100%;
            height: 100%;
            top: 50%;
            left: 50%;
            position: relative;
            transform: translate(-50%, -50%);
        }
        .grid-link {
            display: flex;
            justify-content: space-between;
            height: 100%;
        }
    }
}

// xCal fields
.xcal-fields {
    margin-bottom: 20px;
   .xcal-value {
       float: right;
       width: 70%;
   }
   div {
       display: inline-block;
       width: 100%;
   }
}

// LinkedEvents
.linked-events {
    .event-info {
        margin: 0px !important;
        font-size: 0.95em !important;
    }
    .linked-events-image.no-image {
        background-color: @gray-ultralight;
        .image-placeholder {
            color: @gray-light;
            font-size: 3em;
            position: relative;
            left: 37%;
            top: 30%;
        }
    }
}
.linked-events-pagination {
    display: flex;
    justify-content: center;
    span {
        i {
            font-size: 2em;
            &:hover {
            cursor: pointer
            }
        }
    }
}
.linked-events-content {
    .fa-spinner {
        position: relative;
        left: 50%;
    }
}

.events-searchtools-container {
    .event-search-container, .event-date-container {
        margin-right: 10px;
        margin-left: 5px;
    }
    input {
        border-radius: 5px;
        border: 1px solid @gray-lighter;
        padding: 5px;
    }
    .event-datepicker {
        width: 100px;
    }
    .event-geolocation {
        text-transform: uppercase;
        font-size: 0.84em;
        color: @brand-primary;
        font-weight: bold;
        margin-left: 10px;
        &:hover {
            cursor: pointer;
        }
    }
}
.linked-event-content {
    .linked-event-info {
        display: flex;
        color: @gray-light;
        .linked-event-field {
            margin-right: 30px;
        }
    }
    .linked-events-left-col {
        width: 65%;
        float: left;
        margin-top: 20px;
        @media (max-width: @screen-sm-max) {
            width: 100%;
        }
        .linked-event-image {
            margin-top: 20px;
            margin-bottom: 20px;
            max-height: 500px;
        }
        .linked-event-description {
            margin-top: 10px;
        }
        .linked-event-keywords {
            display: flex;
            flex-wrap: wrap;
            color: @gray-mid-light;
            margin-top: 20px;
            .linked-event-keyword {
                margin-right: 30px;
                margin-bottom: 10px;
            }
        }
    }
    .linked-events-right-col {
        width: 30%;
        float: right;
        margin-top: 20px;
        @media (max-width: @screen-sm-max) {
            width: 100%;
        }
        .linked-event-map-info {
            .linked-event-field {
                border-bottom: 1px solid @gray-lighter;
                padding: 5px;
            }
        }
        .linked-events-map {
            margin-top: 21px;
            height: 200px;
            width: 350px;
        }
    }
}

